--- a/Задача_7.md
+++ b/Задача_7.md
@@ -38,7 +38,7 @@ long long sum(int vertex, int i, int j, int l, int r) {
     if (i >= l && j <= r) {
         return segmentTree[vertex];
     }
-    long long int mid = (j + i) / 2;
+    int mid = (j + i) / 2;
     return sum(2 * vertex + 1, i, mid, l, r) + sum(2 * vertex + 2, mid + 1, j, l, r);
 }
 
