--- a/Задача_7.md
+++ b/Задача_7.md
@@ -22,9 +22,9 @@
 -ый элементы.
 Для каждой команды 'Q' вывести на отдельной строке результат запроса
 
-
 ```
-
+P.S I hadn't created build function because we have start condition with full 0 tree. But build function is
+similar with update function and it isn't hard to create
 ### Implementation
 
 ```
