--- a/Задача_25.md
+++ b/Задача_25.md
@@ -7,36 +7,19 @@
 ### Implementation
 
 ```
-vector<int> getPrimes(int number){
-    vector<bool> prime(number + 1, true);
-    vector<int> primes;
-
-    for (int p = 2; p * p <= number; ++p) {
-        if (prime[p]) {
-            for (int i = p * p; i <= number; i += p)
-                prime[i] = false;
-        }
-    }
-
-    for (int p = 2; p <= number; ++p) {
-        if (prime[p])
-            primes.push_back(p);
-    }
-    return primes;
-}
-
 vector<int> splitNumberByPrimeDivisors(int number) {
     vector<int> primeDivisors;
-    vector<int> primes = getPrimes(number);
-    while(number != 1){
-        for(int j = 0; j < primes.size(); j++){
-            if(number % primes[j] == 0){
-                primeDivisors.push_back(primes[j]);
-                number /= primes[j];
-                j--;
+    int tempN = number;
+    for(int p = 2; p * p <= tempN; p++){
+        if(tempN % p == 0){
+            while(tempN % p == 0){
+                primeDivisors.push_back(p);
+                tempN /= p;
             }
         }
     }
+    if(tempN > 1)
+        primeDivisors.push_back(tempN);
     return primeDivisors;
 }
 ```
