--- a/Задача_5.md
+++ b/Задача_5.md
@@ -1,4 +1,4 @@
-## Condition
+## Condition Задача 5
 
 ```
 Напишите функцию для симметричного (in-order) обхода бинарного дерева, заданного следующей структурой:
@@ -19,51 +19,5 @@ void inorder(Node *n, void (*f)(int)) {
     f(n->value);
     inorder(n->right, f);
 }
-// Указатель на эту функцию мы передаем. нужна что бы проверить правильность обхода
-void printNode(int value){
-    cout << value << "-> ";
-}
-
-//Рекурсивная функция удаления узлов(что бы не было утечек)
-void clear(Node *n) {
-    if (n == nullptr) {
-        return;
-    }
-    clear(n->left);
-    clear(n->right);
-    delete n;
-}
-```
-
-### Testing
-
-```
-int main() {
-    Node *tree = new Node(0, 
-                          new Node(1, 
-                                   new Node(3), 
-                                   new Node(4)), 
-                          new Node(2, 
-                                   new Node(5), 
-                                   new Node(6)));
-    inorder(tree, printNode);
-    clear(tree);
-}
-```
-
-### Outputs
-```
-Input: 
-        0
-       / \
-     1     2
-    / \   / \
-    3  4  5 6
-
-Output: 
-3-> 1-> 4-> 0-> 5-> 2-> 6->
-
-Expected output:
-3-> 1-> 4-> 0-> 5-> 2-> 6->
 
 ```
