--- a/Задача_7.md
+++ b/Задача_7.md
@@ -1,4 +1,4 @@
-## Condition
+## Condition Задача 7
 
 ```
 Используя дерево отрезков решите следующую задачу.
@@ -28,37 +28,52 @@ similar with update function and it isn't hard to create
 ### Implementation
 
 ```
-vector<int> segmentTree(400000, 0);
+class SegmentTree {
+private:
+    vector<long long> segmentTree;
+    int size;
 
-
-long long sum(int vertex, int i, int j, int l, int r) {
-    if (i > r || j < l) {
-        return 0;
+    long long sum(int vertex, int i, int j, int l, int r) {
+        if (i > r || j < l) {
+            return 0;
+        }
+        if (i >= l && j <= r) {
+            return segmentTree[vertex];
+        }
+        int mid = (j + i) / 2;
+        return sum(2 * vertex + 1, i, mid, l, r) + sum(2 * vertex + 2, mid + 1, j, l, r);
     }
-    if (i >= l && j <= r) {
-        return segmentTree[vertex];
-    }
-    int mid = (j + i) / 2;
-    return sum(2 * vertex + 1, i, mid, l, r) + sum(2 * vertex + 2, mid + 1, j, l, r);
-}
 
-
-
-void update(int vertex, int l, int r, int position, int value) {
-    if (l == r){
-        segmentTree[vertex] = value;
-    }
-    else{
-        int mid = (r + l) / 2;
-        if(position <= mid){
-            update(2 * vertex + 1, l, mid, position, value);
+    void update(int vertex, int l, int r, int position, int value) {
+        if (l == r){
+            segmentTree[vertex] = value;
         }
         else{
-            update(2 * vertex + 2, mid + 1, r, position, value);
+            int mid = (r + l) / 2;
+            if(position <= mid){
+                update(2 * vertex + 1, l, mid, position, value);
+            }
+            else{
+                update(2 * vertex + 2, mid + 1, r, position, value);
+            }
+            segmentTree[vertex] = segmentTree[2 * vertex + 1] + segmentTree[2 * vertex + 2];
         }
-        segmentTree[vertex] = segmentTree[2 * vertex + 1] + segmentTree[2 * vertex + 2];
     }
-}
+
+public:
+    SegmentTree(int n) {
+        size = n;
+        segmentTree.resize(4 * n, 0);
+    }
+
+    void update(int position, int value) {
+        update(0, 1, size, position, value);
+    }
+
+    long long sum(int l, int r) {
+        return sum(0, 1, size, l, r);
+    }
+};
 ```
 
 ### Testing
@@ -68,18 +83,20 @@ int main() {
     int K;
     cin >> K;
 
-    for (int k = 0; k < K; ++k) {
+    SegmentTree segmentTree(100000);
+
+    for (int k = 0; k < K; k++) {
         char command;
         cin >> command;
 
         if (command == 'S') {
             int i, v;
             cin >> i >> v;
-            update(0, 1, 100000, i, v);
+            segmentTree.update(i, v);
         } else if (command == 'Q') {
             int i, j;
             cin >> i >> j;
-            cout << sum(0, 1, 100000, i, j) << endl;
+            cout << segmentTree.sum(i, j) << '\n';
         }
     }
 }
