--- a/Задача_19.md
+++ b/Задача_19.md
@@ -1,7 +1,9 @@
 ## Condition Задача 1
 
 ```
-Реализуйте АТД Очередь на односвязном списке (forward_list).
+Напишите функцию поиска подстроки методом Кнута-Мориса-Пратта. Сравните время работы вашей функции с методом find и алгоритмом search с использованием boyer_moore_searcher из <functional> для текста размером 106
+ символов и шаблона 104
+ символов. Результаты представить в виде таблицы. Строки: 3 указанных алгоритма. Столбцы: 1) для случайного текста и шаблона; 2) текст 00...00, шаблон 00...01; 3) текст 00...00, шаблон 10...00.
 ```
 
 ### ImplementationAZ
