--- a/Задача_2.md
+++ b/Задача_2.md
@@ -40,7 +40,7 @@ bool isValidXml(const string& xml) {
             pos = end_pos + 1;
         }
         else
-            ++pos;
+            pos++;
     }
     return tags.empty();
 }
