--- a/Задача_23.md
+++ b/Задача_23.md
@@ -46,7 +46,7 @@ inline Point operator*(double a, Point p) {
 // Класс треугольника, 
 class Triangle {
 private:
-    Point A, B, C;
+    Point A, B, C; // 3 точки, 3 вершины треугольника
 
 public:
     Triangle(Point A, Point B, Point C) : A(A), B(B), C(C) {}
