--- a/Задача_1.md
+++ b/Задача_1.md
@@ -1,68 +1,57 @@
-## Condition Задача 1
+## Condition Задача 1(Исправления)
 
 ```
 Реализуйте АТД Очередь на односвязном списке (forward_list).
 ```
 
-### ImplementationAZ
+### Implementation
 
 ```
 template <typename T>
 class Queue {
 private:
     std::forward_list<T> q;
+    int s; // Ввел переменную размера, что бы брать размер очереди за константу, а не за линию, как раньше
     typename std::forward_list<T>::iterator it;
 
 public:
-    Queue() : it(q.before_begin()) {}
+    Queue() : it(q.before_begin()), s(0) {}
 
     int size() const {
-        return std::distance(q.begin(), q.end());
+        return s;
     }
 
     bool isEmpty() const {
-        return size() == 0;
+        return s == 0;
     }
 
     void push(const T& element) {
         q.insert_after(it, element);
         ++it;
+        s++;
     }
 
     T front() const {
-        return q.front();
+        if(!isEmpty())
+            return q.front();
+        else
+            throw runtime_error("Queue is empty");
     }
 
+    // Удаление элемента
     void pop() {
-        q.pop_front();
+        if(!isEmpty()){
+            q.pop_front();
+            s--;
+            // Если очередь пустая, то мы заного переопределяем итератор, тк он ломался(как вы сказали)
+            if (isEmpty()) {
+                it = q.before_begin();
+            }
+        }
+        else
+            throw runtime_error("Queue is empty");
     }
 };
 ```
 
-### Testing
 
-```
-int main() {
-    Queue<int> q;
-    for(int i = 0; i < 10; i++) {
-        q.push(i + 1);
-    }
-    for(int i = 0; i < 5; i++) {
-        cout << q.front() << ' ';
-        q.pop();
-    }
-    for(int i = 0; i < 5; i++) {
-        q.push(i + 1);
-    }
-    for(int i = 0; i < 10; i++) {
-        cout << q.front() << ' ';
-        q.pop();
-    }
-}
-```
-
-### Outputs
-```
-Output: 1 2 3 4 5 6 7 8 9 10 1 2 3 4 5
-Expected output: 1 2 3 4 5 6 7 8 9 10 1 2 3 4 5
-```
