--- a/Задача_9.md
+++ b/Задача_9.md
@@ -1,60 +1,86 @@
 ## Condition Задача 9
 
 ```
-Сравните время работы set и unordered_set из STL для операций поиска с количеством элементов N=100,10000,10^6,10^7
-. Ключами являются строки из случайных букв от a до z длиной ровно 16. Результат оформить в виде таблицы, время в ns. Привести код, использованный для измерения времени для одного значения N
+Сравните время работы set и unordered_set из STL для операций поиска с количеством элементов N=100,10000,10^6,10^7.
+Ключами являются строки из случайных букв от a до z длиной ровно 16. Результат оформить в виде таблицы, время в ns.
+Привести код, использованный для измерения времени для одного значения N.
 ```
 
 ### Implementation
 
 ```
+#include <iostream>
+#include <unordered_set>
+#include <set>
+#include <chrono>
+#include <string>
+#include <vector>
+
 using namespace std;
 using namespace std::chrono;
 
-int main() {
-    vector<int> vec(1000000);
-    srand(time(0));
-    for (int i = 0; i < 1000000; ++i) {
-        vec[i] = rand();
+string generateString(int size) {
+    srand(0);
+    string answer = "";
+    for(int i = 0; i < size; i++) {
+        answer += 'a' + rand() % 26;
+    }
+    return answer;
+}
+
+// функция которая считает время поиска и возвращает пару(время поиска для одинакого колва элементов)
+pair<long long, long long> times(int size){
+    vector<string> keys(20, generateString(16));
+    set<string> s;
+    unordered_set<string> us;
+    // первые 10 строк будут входить, а оставшиеся 10 не будут входить.
+    // для того, что бы мы понимали что первые 10 слов точно входят и ищем существующее
+    for(int i = 0; i < 10; i++){
+        s.insert(keys[i]);
+        us.insert(keys[i]);
+    }
+    // провожу тестирование на одинаковых строках
+    for(int i = 10; i < size - 10; i++){
+        s.insert(generateString(16));
+        us.insert(generateString(16));
     }
 
-    vector<int> vec_copy = vec;
-
-    // Измерение времени для sort
     auto start = high_resolution_clock::now();
-    sort(vec.begin(), vec.end());
-    auto end = high_resolution_clock::now();
-    long long  duration_1 = duration_cast<milliseconds>(end - start).count();
+    for(int i = 0; i < 20; i++){
+        s.find(keys[i]);
+    }
+    auto stop = high_resolution_clock::now();
+    auto duration_set = duration_cast<nanoseconds>(stop - start);
 
-    // Измерение времени для stable_sort
-    vec = vec_copy;
     start = high_resolution_clock::now();
-    stable_sort(vec.begin(), vec.end());
-    end = high_resolution_clock::now();
-    long long  duration_2 = duration_cast<milliseconds>(end - start).count();
+    for(int i = 0; i < 20; i++){
+        us.find(keys[i]);
+    }
+    stop = high_resolution_clock::now();
+    auto duration_uset = duration_cast<nanoseconds>(stop - start);
 
-    // Измерение времени для make_heap/sort_heap
-    vec = vec_copy;
-    start = high_resolution_clock::now();
-    make_heap(vec.begin(), vec.end());
-    sort_heap(vec.begin(), vec.end());
-    end = high_resolution_clock::now();
-    long long duration_3 = duration_cast<milliseconds>(end - start).count();
-
-    // Вывод результатов
-    cout << duration_1 << " ms" << '\n';
-    cout << duration_2<< " ms" << '\n';
-    cout << duration_3 << " ms" << '\n';
+    return make_pair(duration_set.count(), duration_uset.count());
 }
+
+// Запускаем 4 теста для разного количества элементов
+int main() {
+    vector<int> sizes = {100, 10000, 1000000, 10000000};
+
+    for(int i = 0; i < 4; i++){
+
+        pair<long long, long long> result = times(sizes[i]);
+        cout << sizes[i] << "|" << result.first << "| " << result.second << '\n';
+    }
+}
+
 ```
 
 ### Outputs Таблица результата.
 ```
-|        |  sort  | stable_sort  | make_heap/sort_heap |
-| test_1 | 360 ms |    445 ms    |       871 ms        |      
-| test_2 | 355 ms |    451 ms    |       833 ms        |     
-| test_3 | 359 ms |    428 ms    |       836 ms        |     
-| test_4 | 358 ms |    429 ms    |       793 ms        |     
-| test_5 | 357 ms |    438 ms    |       780 ms        |     
+|          |   set(ns)  | unordered_set(ns)  |
+| 100      |    3300    |        2400        |      
+| 10000    |    4300    |        3200        |     
+| 1000000  |    3400    |        2600        |
+| 10000000 |    4500    |        3000        |
 
 ```
